# cognizantaimlapr2026

banking sys/src/BankingSystem.egg-info/: SOURCES.txt
day2/: pyproject.toml
day2/docs/source/: app.rst  conf.py  index.rst  start.rst
day2/ecommerce.egg-info/: PKG-INFO
day2/src/: app.py  start.py
day2/src/models/: customer.py
day2/src/store/: customerstore.py
day3/: pyproject.toml  reports.html
day3/conf/: logger_conf.py
day3/src/exceptions/: appointment_not_found_exception.py  doctor_notfound_exception.py  patient_notfound_exception.py
day3/src/healthcare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day3/src/models/: appoinment.py  appointment.py  doctor.py  patient.py  person.py  role.py  staff.py
day3/src/stores/: appointmentstore.py  doctorstore.py  patientstore.py
day3/src/utils/: app.py  main.py
day3/test/: doctors.csv  patient.csv  test_patient.py
day3/test/contract_testing/: test_doctor.py  test_doctor_store.py
health assignment/docs/: Makefile
health assignment/docs/source/: conf.py  index.rst  start.rst
health_assignment/: README.md  pyproject.toml
health_assignment/healthcare.egg-info/: SOURCES.txt
health_assignment/healthenv/: pyvenv.cfg
health_assignment/src/: app.py
health_assignment/src/models/: __init__.py  doctor.py  patient.py
health_assignment/src/store/: __init__.py  health_store.py
health_assignment/src/view/: __init__.py  health_view.py
