[project]
name = "healthcare"
version = "1.0.0"
description = "Developing ecommerce application"
readme = "README.md"
authors = [
    {name = "monica",email = "moicasubramani2004@gmail.com"}
]
requires-python = ">=3.8"
# production level dependencies 
dependencies =[
    "faker>=13.3.4"
]
# development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-html>=4.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.3.0",
    "isort>=5.0.0",
    "sphinx>=5.0.0"
]
# configure the tool black
[tool.black]
line-length = 88
target-version = ['py313']